ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_pr_detail_ci_success.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ #102 · Add PrDetail screen ✓ ────────────────────────────────── @ooloth · 1d ╮
│                                                                              │
│## Summary                                                                    │
│                                                                              │
│Adds a detail screen for PRs.                                                 │
│                                                                              │
│## Why                                                                        │
│                                                                              │
╰ 0 reviews · 2 comments ────────────────────────────────────────── ooloth/hub ╯
  [↩] open · [i] investigate · [l] lazygit · [v] review · [m] merge · [Esc] bac
