ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_pr_detail_diff_scrolled.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ Add PrDetail screen ────────────────────────────────────── ooloth/hub · #102 ╮
│## Why                                                                        │
│                                                                              │
│Readability from terminal without leaving the TUI.                            │
│                                                                              │
│── src/main.rs ──────────────────────────────────────────────────────── +3 -1 │
│                                                                              │
│@@ -10,7 +10,9 @@                                                             │
│ context                                                                      │
│-old line                                                                     │
│+new line                                                                     │
│+another new                                                                  │
│+third new                                                                    │
│                                                                              │
│── assets/logo.png ──────────────────────────────────────────────────── +0 -0 │
│ (binary)                                                                     │
│                                                                              │
│                                                                              │
╰ 2 reviews ───────────────────────────────────────────────────── @ooloth · 1d ╯
  [↩] open · [i] investigate · [Esc] back
