ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_pr_detail_diff_truncated.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ #102 · Add PrDetail screen ──────────────────────────────────── @ooloth · 1d ╮
│                                                                              │
│## Summary                                                                    │
│                                                                              │
│Adds a detail screen for PRs.                                                 │
│                                                                              │
│## Why                                                                        │
│                                                                              │
│Readability from terminal without leaving the TUI.                            │
│                                                                              │
│── src/main.rs ──────────────────────────────────────────────────────── +3 -1 │
│                                                                              │
│@@ -10,7 +10,9 @@                                                             │
│ context                                                                      │
│-old line                                                                     │
│+new line                                                                     │
│+another new                                                                  │
│+third new                                                                    │
│                                                                              │
│── assets/logo.png ──────────────────────────────────────────────────── +0 -0 │
│ (binary)                                                                     │
│                                                                              │
│ … and 148 more files not shown                                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰ 0 reviews · 2 comments · 150 files · +3 -1 ────────────────────── ooloth/hub ╯
  [o] open · [d] diff · [v] review · [m] merge · [i] ask · [Esc] back
