ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_pr_detail_no_body.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ #99 · Fix typo in README ──────────────────────────────────────── ooloth/hub ╮
│                                                                              │
│(no description)                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰ 0 reviews ───────────────────────────────────────────────────── @ooloth · 5h ╯
  [↩] open · [i] investigate · [l] lazygit · [v] review · [m] merge · [Esc] bac
