ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_pr_detail_scrolled.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ #102 · Add PrDetail screen ──────────────────────────────────── @ooloth · 1d ╮
│                                                                              │
│## Summary                                                                    │
│                                                                              │
│Adds a detail screen for PRs.                                                 │
│                                                                              │
│## Why                                                                        │
│                                                                              │
│Readability from terminal without leaving the TUI.                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰ 0 reviews · 2 comments ────────────────────────────────────────── ooloth/hub ╯
  [↩] open · [i] investigate · [o] octo · [l] lazygit · [v] review · [m] merge
