ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_pr_detail_with_body.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ Add PrDetail screen ────────────────────────────────────── ooloth/hub · #102 ╮
│                                                                              │
│## Summary                                                                    │
│                                                                              │
│Adds a detail screen for PRs.                                                 │
│                                                                              │
│## Why                                                                        │
│                                                                              │
│Readability from terminal without leaving the TUI.                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰ No reviews · 2 comments ─────────────────────────────────────── @ooloth · 1d ╯
  [↩] open · [i] investigate · [m] merge · [Esc] back
