ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_pr_detail_with_conflict.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ #99 · Fix typo in README ! ──────────────────────────────────── @ooloth · 5h ╮
│                                                                              │
│(no description)                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰ conflict · 0 reviews ──────────────────────────────────────────── ooloth/hub ╯
  [o] open · [d] diff · [v] review · [m] merge · [i] ask · [Esc] back
