ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_pr_detail_with_inline_comments.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ Add PrDetail screen ────────────────────────────────────── ooloth/hub · #102 ╮
│                                                                              │
│## Summary                                                                    │
│                                                                              │
│Adds a detail screen for PRs.                                                 │
│                                                                              │
│## Why                                                                        │
│                                                                              │
│Readability from terminal without leaving the TUI.                            │
│                                                                              │
│── src/main.rs ──────────────────────────────────────────────────────── +3 -1 │
│                                                                              │
│@@ -10,7 +10,9 @@                                                             │
│ context                                                                      │
│-old line                                                                     │
│+new line                                                                     │
│                                                                              │
│ @reviewer · 2d                                                               │
│ Why not use a constant here?                                                 │
│                                                                              │
│+another new                                                                  │
│+third new                                                                    │
│                                                                              │
│ @reviewer2 · 3h                                                              │
│ Overall LGTM.                                                                │
│                                                                              │
│                                                                              │
│── assets/logo.png ──────────────────────────────────────────────────── +0 -0 │
│ (binary)                                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰ No reviews · 2 comments · 2 files · +3 -1 ───────────────────── @ooloth · 1d ╯
  [↩] open · [i] investigate · [v] review · [m] merge · [Esc] back
