ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_pr_split_detail_populated.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ PRs ────────────────────────────────────────────────────────────────────────┬───────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ●  filter claude stderr                                                     │ PR #159 · ooloth/hub                                                                                              │
│    ooloth/hub · #159 · @ooloth · 0 reviews                                  │                                                                                                                   │
│                                                                             │ filter claude stderr                                                                                              │
│                                                                             │                                                                                                                   │
│                                                                             │   status  ●  0 reviews                                                                                            │
│                                                                             │   checks     ✓ passing                                                                                            │
│                                                                             │   diff       +43 −3 in 3 files                                                                                    │
│                                                                             │   branch     fix/stderr-filter                                                                                    │
│                                                                             │   author     @ooloth                                                                                              │
│                                                                             │   updated    2d ago                                                                                               │
│                                                                             │                                                                                                                   │
│                                                                             │ Files changed                                                                                                     │
│                                                                             │                                                                                                                   │
│                                                                             │   workflows/src/agent.rs  +24 −3                                                                                  │
│                                                                             │   workflows/src/lib.rs    +1 −0                                                                                   │
│                                                                             │   tests/agent_test.rs     +18 −0                                                                                  │
│                                                                             │                                                                                                                   │
│                                                                             │ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│                                                                             │                                                                                                                   │
│                                                                             │ Description                                                                                                       │
│                                                                             │                                                                                                                   │
│                                                                             │   The agent invocation path forwards stderr verbatim, which has                                                   │
│                                                                             │   leaked token-bearing lines into committed transcripts.                                                          │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
╰─────────────────────────────────────────────────────────────────────────────┴───────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  1/1 · [i] investigate · [o] octo · [l] lazygit · [v] review · [m] merge · [Esc] back
