ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_pr_split_empty.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ PRs · 0 · split (v1) ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│No PRs available.                                                                                                                                                                                │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
│                                                                                                                                                                                                 │
╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
